--- a/static/main.css
+++ b/static/main.css
@@ -10,6 +10,12 @@ header {
 	padding-bottom: 20px;
 }
 
+.vendor-photo {
+	max-width: 200px;
+	max-height: 150px;
+	padding-right: 20px;
+}
+
 .vendor-book-button {
 	font-size: 2em;
 }
